<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_231e39"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#FEBB0B"
        android:fontFamily="sans-serif"
        android:text="@string/pro"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:src="@drawable/asdasd"
        app:civ_border_color="#03BFCB"
        app:civ_border_overlay="true"
        app:civ_border_width="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:text="Miftahunnaufal"
        android:textAlignment="center"
        android:textColor="#98B1CB"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/yogyakarta"
        android:textColor="#98B1CB"
        android:textSize="15sp" />

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:text="@string/android_development_ui_ux_designe_web_designer"
        android:textAlignment="center"
        android:textColor="#98B1CB"
        android:textSize="15sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#1F1A36" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/skils"
        android:textColor="#98B1CB"
        android:textSize="20dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_ux_designe"
                android:textSize="15sp"
                android:textColor="@color/abu"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/_00a7d3"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:layout_marginHorizontal="10dp">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_development"
                android:textSize="15sp"
                android:textColor="@color/abu"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/_00a7d3"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:layout_marginHorizontal="10dp">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_development"
                android:textSize="15sp"
                android:textColor="@color/abu"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/_00a7d3"
                app:strokeColor="@color/abu"
                app:strokeWidth="2dp"
                android:layout_marginHorizontal="10dp">
            </Button>
        </LinearLayout>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamer"
                android:textSize="15sp"
                android:textColor="@color/abu"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/_00a7d3"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:layout_marginHorizontal="10dp">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_development"
                android:textSize="15sp"
                android:textColor="@color/abu"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/_00a7d3"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:layout_marginHorizontal="10dp">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/_00a7d3"
                android:fontFamily="sans-serif"
                android:text="@string/seller"
                android:textColor="@color/abu"
                android:textSize="15sp"
                app:strokeColor="@color/abu"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>