<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/_231e39"
    tools:context=".DetailMainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_margin="20dp"
        android:id="@+id/image_item_hp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:id="@+id/title"
        android:layout_marginTop="5dp"
        android:layout_width="300dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/_00a7d3"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_item_hp">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/deskripsiii"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/item_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/white"

            android:text="@string/deskripsi"
            android:textAlignment="center"
            tools:ignore="MissingConstraints" />

    </TableLayout>


    <Button
        android:id="@+id/go_web"
        android:layout_width="360dp"
        android:backgroundTintMode="add"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/_00a7d3"
        android:text="@string/cek_di_website"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
